# EL_ATARDECER

./: .cursorignore  .dockerignore  .env  .gitattributes  .gitignore  .graphqlrc.yml  AUDITORIA_APPS_COMPLETA.md  CHANGELOG.md  ESTRUCTURA_COMPLETA.md  README.md  analysis_results.json  audit_enterprise_project.py  check_syntax.py  ciclo_completo_real_reporte.json  codegen.yml  commit_fixed_workflow.py  crear_directorios.ps1  delete_workflows.py  deploy_consciousness_complete.py  deploy_local.py  desactivar_restricciones_red.py  docker-compose.bypass.yml  docker-compose.yml  el_amanecer_analysis_report.json  final_deploy_complete.py  fix_init.py  fix_test_files.py  generar_estructura_completa.py  generar_estructura_exhaustiva.py  generar_estructura_resumida.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_neural.txt  run_all_enterprise_tests.py  setup_environment.py  simple_green_deploy.py  start_backend.bat  (+3 more)
.github/workflows/: ci-cd-enterprise.yml  code-quality.yml  enterprise-tests.yml  green-tests.yml
apps/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
apps/app/: globals.css  layout.tsx  page.tsx
apps/backend/: Dockerfile  Dockerfile.local  __init__.py  federation_server.py  main.py  neural_consciousness_api.py  run_federation.py  temporal_worker.py  temporal_workflows.py  test_api_integration.py  todo_service.py  training_monitor.py
apps/consciousness_server/: Dockerfile  __init__.py  main.py
apps/consciousness_worker/: Dockerfile  __init__.py  main.py
apps/frontend/: Dockerfile  nginx.conf
apps/hooks/: use-api.ts
apps/lib/: api.ts
apps/llm_service/: Dockerfile  __init__.py
config/: README.md  sheily_token_config.json  test_wallet.json
config/core/: settings.py
config/enterprise/: enterprise_config.yaml
dapr/components/: pubsub.yaml  secrets.yaml  statestore.yaml
data/: training_data.json
data/benchmarks/: benchmark_report_20251129_012713.json  benchmark_summary_20251129_012713.txt
data/cache/: chat-2115582258253695011.json  chat-2790460951637304136.json  chat-4032827797960185340.json  chat-4798718446508905744.json  chat-7870550598643284706.json
data/consciousness/: brain_state.json  digital_dna.json
data/datasets/: hackmemori_auto_20251128.json  hackmemori_auto_20251129.json  hackmemori_auto_20251130.json
data/evolution_state/: current_training_data.json  evolution_state.json
data/training/: auto_training_continual_learning_20251201_013528.json  auto_training_continual_learning_20251201_014618.json  auto_training_meta_learning_20251130_234324.json  progress.json  smart_trigger_history.json  smart_trigger_state.json
data/training_reports/: smart_training_20251201_023402.json  smart_training_20251201_023550.json  smart_training_20251201_023734.json  smart_training_20251201_024022.json  smart_training_20251201_024213.json  smart_training_20251201_024702.json  smart_training_20251201_025258.json  smart_training_20251201_030223.json  smart_training_20251201_030403.json  training_batches_20251130_232513.json  training_batches_20251130_232755.json  training_batches_20251201_030204.json  training_batches_fast_20251130_234537.json
data/user_profiles/: memories_Sergio.json  memories_terminal_user.json  profile_Sergio.json  profile_terminal_user.json  user-1_tokens.json
examples/: demo_embeddings_real.py  demo_embeddings_real_fixed.py
logs/: meta_cognition_20251128_015515.json  meta_cognition_20251128_015516.json  meta_cognition_20251128_015517.json
monitoring/metrics/: metrics_snapshot_20251127_230910.json  metrics_snapshot_20251127_231420.json  metrics_snapshot_20251127_231931.json  metrics_snapshot_20251127_232441.json  metrics_snapshot_20251127_232951.json  metrics_snapshot_20251127_233501.json  metrics_snapshot_20251127_234011.json  metrics_snapshot_20251127_234521.json  metrics_snapshot_20251127_235031.json  metrics_snapshot_20251127_235541.json
proto/: consciousness.proto  emotion.proto
scripts/: README.md  collect_hack_memori_data.py  install_dapr.ps1  migrate_provisional_tokens.py  migrate_responses_to_optimized_format.py  recover_hack_memori_training.py  reset_tokens.py  simple_backend_tokens.py  test_backend.py  test_hack_memori_training.py  test_real_training_integration.py  train_neural_modules.py  verify_dapr.py
scripts/backup/: real_functional_training_backup.py
scripts/core/: execute_real_evolution_cycle.py
scripts/deprecated/: force_repair.py  mcp_terminal_chat.py  repair_corruption.py
scripts/launchers/: start.bat
scripts/maintenance/: fix_corruption.py  fix_encoding.py  repair_corruption_v2.py  repair_rag_file.py  update_containers.py
scripts/monitoring/: __init__.py
scripts/services/: serve_frontend.py  sheily_chat.py
scripts/setup/: crear_directorios.ps1
scripts/testing/: simple_analysis.py  test_embedding_consistency.py  test_embedding_consistency_fixed.py  test_pegamento_completo.py  test_rag_demo.py  validate_dashboard.py  validate_frontend_connection.py  validate_trained_model.py
scripts/training/: generate_training_data.py  real_functional_training.py  simple_training.py  smart_training_trigger.py  test_model.py  train_100_files_complete.py  train_600_files_in_batches.py  train_600_files_in_batches_fast.py  train_all_existing_responses.py  train_embeddings.py  train_hack_memori_responses.py
tests/: README.md  __init__.py  conftest.py  minimal_validation_suite.py  test_neural_system.py
tests/api/: test_graphql_real.py  test_pegamento_graphql.py
tests/diagnostics/: __init__.py  diagnostico_testing.py
tests/enterprise/: __init__.py  test_api_enterprise_suites.py  (+16 more)
tools/: README.md  benchmark_el_amanecer.py
(+234 files in other folders)
